# Cellular-Automata

./: CMakeLists.txt  Makefile  README.md  main.cpp  plot.py
include/: application.hpp  creature.hpp  element.hpp  entity.hpp  logger.hpp  perlin.hpp  terrain.hpp  types.hpp  util.hpp
src/: application.cpp  creature.cpp  element.cpp  entity.cpp  main.cpp  perlin.cpp  terrain.cpp  util.cpp
